add template and modify database for bootstrap
