# docs/swagger.json
@@ -1401,6 +1401,10 @@
         "model.KubernetesInfo": {
             "type": "object",
             "properties": {
+                "bootstrap_provider": {
+                    "type": "integer",
+                    "example": 1
+                },
                 "cp_kubeadm_extra_config": {
                     "$ref": "#/definitions/model.ExtraConfig"
                 },
